# mtbnn_pyro

./: .gitignore  README.md  bnn.py  demo.py  meshgrid.py  mtblr.py  mtbnn.py  mtbnn_clean.py  plotting.py  setup.cfg  test_set_requires_grad.py  train_mtbnn_version1.py  train_vanilla_bnn.py  util.py  vae.py  vae2.py
misc/: lazy_param.py  mlp_init.py  test_multiprocessing.py  test_multiprocessing.sh  test_plate.py  test_replay.py  test_set_requires_grad.py  torch_autograd_tutorial.py  wandb_multiprocessing.py  wandb_test.py
scripts/: run_maml.py  run_mlp.py  run_mtbnn.py  run_mtmlp.py
scripts/mtbnn/: run_mtbnn.py  run_mtbnn_monte_carlo.py
src/empirical_bayes_through_gradient_descent/: correlated_gaussian.py  optimize_marginal_likelihood.py  qmc_sampling.py  sgd_with_gaussians.py
src/misc/: grad_of_vector_function.py  guide_initialization.py  lagrangian_optimization.py  lazy_param.py  local_reparametrization.py  normal_vs_multivariate_normal.py  optimize_marginal_likelihood.py  reshape.py  sgd_with_gaussians.py  simpson.py  test_block_diag.py  test_cache.py  test_pyro_param_autograd.py  understand_torch_graph.py  understand_views.py  wandb_custom_metric.py  wandb_seeds.py
src/mlp/: mlp.py  plotting.py
src/mtbnn.egg-info/: PKG-INFO  (+3 more)
sweeps/: sweep_initializations.yaml  sweep_lvm.yaml  sweep_maml_network_architecture.yaml  sweep_mc_prior_training.yaml  sweep_mtbnn_sinusoid1d_maml_settings.yaml  sweep_network_size.yaml  sweep_network_size_lr_sinusoid1d_single_task.yaml  sweep_network_size_sinusoid1d_single_task.yaml  sweep_prior_types2.yaml  sweep_test_disown.yaml
(+12 files in other folders)
