[metadata]
name = mtbnn
description = An implementation of multi-task Bayesian neural networks.
author = Michael Volpp
license = tbd
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    mtbnn
install_requires =
    matplotlib>=3.4.2
    metalearning_benchmarks>=0.0.1
    numpy>=1.21.0
    pyro-ppl>=1.7.0
    scipy>=1.7.0
    seaborn>=0.11.1
    torch>=1.9.0
    wandb>=0.12.2
python_requires = >=3.9
package_dir =
    =src